table header, Arado-ID -> ID which is shorter, so that this column can be fixed or defaul be as width as the logo button above it.

--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -93,7 +93,7 @@
          </attribute>
          <column>
           <property name="text">
-           <string>ARADO-ID</string>
+           <string>ID</string>
           </property>
           <property name="toolTip">
            <string>The ARADO-ID is an URL-Shortener, you can post into any board, chat or email. Just doubleclick on it.</string>
