--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Arado - URL Database</string>
+   <string>Arado - Websearch</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
