fixed refresh problem, parameterize update config, can't produce failure in address messaging

--- a/arado.qrc
+++ b/arado.qrc
@@ -60,5 +60,6 @@
         <file alias="ippeerindex.sql">schemafiles/ippeerindex.sql</file>
         <file alias="peeruuid.sql">schemafiles/peeruuid.sql</file>
         <file alias="uuindex.sql">schemafiles/uuindex.sql</file>
+        <file alias="uniqueuu.sql">schemafiles/uniqueuu.sql</file>
     </qresource>
 </RCC>
