--- a/arado.qrc
+++ b/arado.qrc
@@ -34,6 +34,8 @@
         <file>images/no.png</file>
         <file alias="claim-trans.png">images/arado-claim-transparent.png</file>
         <file alias="claim-white.png">images/arado-claim-white.png</file>
+        <file>images/facebook.png</file>
+        <file>images/twitter.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
