delicio.us added to gui.

--- a/arado.qrc
+++ b/arado.qrc
@@ -36,6 +36,7 @@
         <file alias="claim-white.png">images/arado-claim-white.png</file>
         <file>images/facebook.png</file>
         <file>images/twitter.png</file>
+        <file>images/delicious.png</file>
         <file>images/thunderbird.png</file>
         <file>images/gmail.png</file>
         <file>images/ymail.png</file>
