--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -39,7 +39,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -52,6 +52,7 @@
     <addaction name="actionShowUuid"/>
     <addaction name="actionMailUuid"/>
     <addaction name="separator"/>
+    <addaction name="actionRestart"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuDevel">
@@ -208,6 +209,11 @@
    </property>
    <property name="text">
     <string>Mail own UUID</string>
+   </property>
+  </action>
+  <action name="actionRestart">
+   <property name="text">
+    <string>Restart</string>
    </property>
   </action>
  </widget>
