some gradient for the flexibles?

--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -468,6 +468,9 @@
        </item>
        <item>
         <widget class="QTableWidget" name="tableWidget_C">
+         <property name="styleSheet">
+          <string notr="true">background-color: qlineargradient(spread:pad, x1:0.968, y1:0.932, x2:0.513, y2:0.5, stop:0 rgba(183, 235, 255, 255), stop:1 rgba(255, 255, 255, 255));</string>
+         </property>
          <property name="showGrid">
           <bool>false</bool>
          </property>
