--- a/ui/config-edit.ui
+++ b/ui/config-edit.ui
@@ -36,6 +36,9 @@
        <verstretch>20</verstretch>
       </sizepolicy>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0.968, y1:0.932, x2:0.513, y2:0.5, stop:0 rgba(183, 235, 255, 255), stop:1 rgba(255, 255, 255, 255));</string>
+     </property>
      <attribute name="headerVisible">
       <bool>true</bool>
      </attribute>
