--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -238,7 +238,7 @@
             </font>
            </property>
            <property name="toolTip">
-            <string>Shows how many incoming and outgoing connections are established (maximum = 30). If connections = 0, please add one online IP+Port and press the boot button to connect and fill the IP-cache.</string>
+            <string>Statusinfo.</string>
            </property>
            <property name="layoutDirection">
             <enum>Qt::LeftToRight</enum>
